Add local database to save data from api and show local data to view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     alias(libs.plugins.kotlin.compose)
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp'
 }
 
 apply plugin: 'com.android.application'
@@ -70,4 +71,10 @@ dependencies {
     implementation libs.converter.gson
     implementation libs.retrofit
     implementation libs.retrofit2.kotlin.coroutines.adapter
+
+    implementation libs.androidx.room.runtime
+
+    implementation libs.androidx.room.ktx
+
+    ksp libs.androidx.room.compiler
 }
