--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,10 +13,14 @@ activityCompose = "1.10.1"
 composeBom = "2024.04.01"
 playServicesLocation = "21.3.0"
 retrofit2KotlinCoroutinesAdapter = "0.9.2"
+roomRuntime = "2.6.1"
 securityCrypto = "1.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
+androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
+androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
